fixed: when screen was 700px or smaller, there was a horizontal overflow, which was caused by the opening component, where the text was 700px wide.

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -34,3 +34,8 @@
   background: white;
   z-index:100;
 }
+
+.main{
+  margin-top: 110px;
+}
+
